fixing overflow of items in paper components

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 body {
   background-image: url('./soccer_background.jpeg');
 
-  /* background-repeat: no-repeat; */
+  background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
 
